Hub lead margin bugfix
Remove -20px left margin that was causing lead story to misalign on mobile

--- a/css/newsroom.css
+++ b/css/newsroom.css
@@ -3029,7 +3029,6 @@ UPDATE THIS CLASS FOR THE PAGE
 
   .headline-area .grid-snippet.lead figure {
     width: 100vw;
-    margin-left: -20px;
     position: relative;
     }
 }
